WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104122
[BlackBerry] meta viewport pages are rendered at a bad initial scale
https://bugs.webkit.org/show_bug.cgi?id=104122
Summary
[BlackBerry] meta viewport pages are rendered at a bad initial scale
Jacky Jiang
Reported
2012-12-05 07:50:49 PST
PR: 240378.
Attachments
Patch
(7.11 KB, patch)
2012-12-05 08:14 PST
,
Jacky Jiang
rwlbuis
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2012-12-05 08:14:31 PST
Created
attachment 177753
[details]
Patch
Rob Buis
Comment 2
2012-12-05 08:25:54 PST
Comment on
attachment 177753
[details]
Patch LGTM.
Jacky Jiang
Comment 3
2012-12-05 09:27:33 PST
Committed
r136700
: <
http://trac.webkit.org/changeset/136700
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug